Metal backend has distorted image outline in video sequencer. #104016

Closed
opened 2023-01-20 05:57:25 +01:00 by Alaska · 9 comments
Member

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-20 04:20, hash: 1e8cc72f85
Worked: NA

Short description of error
When the Metal GPU backend is used for the Blender UI, then the outline on the image in the video sequencer previewer appears distorted. This issue does not occur if the OpenGL backend is used.

OpenGL Image Preview.png Metal Image Preview.png
OpenGL Metal

The issue is with the Metal image showing a white line running from the centre of the image to the upper right. This is part of the "Image outline" provided by the Blender UI.

Exact steps for others to reproduce the error

  1. Open Blender on a Mac.
  2. Open the preferences window.
  3. In the System tab change the backend to Metal, save the preferences, then close and re-open Blender.
  4. In the newly opened Blender, select from the top left File -> New -> Video Editing
  5. Add a image or video to the time line.
  6. In the preview window found above the time line, you will see the image with the distorted outline. If you do not see the image or distorted outline, make sure you adjust the position on the time line so the current frame is over the image/video, and that you have the image or video selected in the time line.
**System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple `M1` Pro 1.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-20 04:20, hash: `1e8cc72f85` Worked: NA **Short description of error** When the Metal GPU backend is used for the Blender UI, then the outline on the image in the video sequencer previewer appears distorted. This issue does not occur if the OpenGL backend is used. |![OpenGL Image Preview.png](https://archive.blender.org/developer/F14178244/OpenGL_Image_Preview.png)|![Metal Image Preview.png](https://archive.blender.org/developer/F14178247/Metal_Image_Preview.png)| | -- | -- | |OpenGL|Metal| The issue is with the Metal image showing a white line running from the centre of the image to the upper right. This is part of the "Image outline" provided by the Blender UI. **Exact steps for others to reproduce the error** 1. Open Blender on a Mac. 2. Open the preferences window. 3. In the `System` tab change the backend to Metal, save the preferences, then close and re-open Blender. 4. In the newly opened Blender, select from the top left `File -> New -> Video Editing` 5. Add a image or video to the time line. 6. In the preview window found above the time line, you will see the image with the distorted outline. If you do not see the image or distorted outline, make sure you adjust the position on the time line so the current frame is over the image/video, and that you have the image or video selected in the time line.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @iss

Added subscriber: @iss

Can't reproduce on
Operating system: macOS-13.0.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.9.48

Can't reproduce on Operating system: macOS-13.0.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.9.48

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I can confirm.

This is a case where GPU_PRIM_LINE_LOOP is used but not supported for Metal.

There are other similar cases (proportional edit circle, snap circle...)

Not sure how this will be handled (#96261 (Metal Viewport ))

I can confirm. This is a case where `GPU_PRIM_LINE_LOOP` is used but not supported for Metal. There are other similar cases (proportional edit circle, snap circle...) Not sure how this will be handled (#96261 (Metal Viewport ))

Added subscriber: @Michael-Parkin-White-Apple

Added subscriber: @Michael-Parkin-White-Apple

Thanks for highlighting, should be a fairly straight forward fix. There are cases where Line Loop should be emulated, but generally more optimal and consistent to fix the calling code, as it only involves ejecting one extra vertex.
Will submit a patch soon.

Thanks for highlighting, should be a fairly straight forward fix. There are cases where Line Loop should be emulated, but generally more optimal and consistent to fix the calling code, as it only involves ejecting one extra vertex. Will submit a patch soon.
Michael Parkin-White self-assigned this 2023-02-06 14:28:08 +01:00
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:53 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-02-26 15:22:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104016
No description provided.